NOCC 1.6  ?? ??, ??

  Patches
    * Patch #1911516 : Add submenu to mail view (Tim Gerundt).
    * Patch #1909759 : message body word wrap (Tobias Mathes).
    * Patch #1908364 : Move "Manage IMAP Folders" to main menu (Tim Gerundt).
    * Patch #1897338 : Add favicon (Tim Gerundt).
    * Patch #1896532 : New attachment icon (Tim Gerundt).
    * Patch #1894098 : Use <ul> for main menu (Tim Gerundt).

  Misc
    * Update some theme images (Tim Gerundt).
    * Reorganize some files (Arnaud Boudou).
    * Add trash can feature on IMAP accounts (Arnaud Boudou).

NOCC 1.5  January 01, 2008

  Bugs
    * Bug #1793631 : Wrong $conf->base_url with non-default port
      (Arnaud Boudou).
    * Bug #1766528 : Blank headers because AIX iconv uses different names (Carey
      Evans).

  Patches
    * Patch #1820487 : attachments downloaded with zero size (Arnaud Boudou).
    * Patch #1838031 : Move "Preferences" and "Logout" to the top right corner 
      (Tim Gerundt).
    * Patch #1819600 : New inbox table layout for "standard" theme (Tim
      Gerundt).
    * Patch #1815635 : Corrected CS localisation (Ragimiri).
    * Patch #1810354 : Highlight and marking of rows in inbox table (Tim
      Gerundt).
    * Patch #1786808 : Move JavaScript code to own file (Tim Gerundt).

  RFE
    * RFE #1854176 : Enhancement suggestions (Tim Gerundt, Michael D Young).
    * RFE #1804115 : list of personalised files (Arnaud Boudou).

  Misc
    * Harmonize mail header background color (Tim Gerundt).
    * Hide CSS images with "url()" too (Tim Gerundt).
    * Remove unused $_SESSION['tab_mail'] (Tim Gerundt).
    * Add "Even/Odd" theming support for inbox (Tim Gerundt).
    * Fix issue with session save cookie (Arnaud Boudou).
    * Add a new way to use 'user@domain' style logins (Arnaud Boudou).
    * Cut off long "From" addresses in inbox (Tim Gerundt).
    * Remove nested table from inbox opts menu (Tim Gerundt).
    * Change the way language list is displayed (Arnaud Boudou).