@@ -1,6 +1,7 @@
 NOCC 1.6  ?? ??, ??
 
   Patches
+    * Patch #1915151 : NOCC breaks message threads on reply (Tobias Mathes).
     * Patch #1911516 : Add submenu to mail view (Tim Gerundt).
     * Patch #1909759 : message body word wrap (Tobias Mathes).
     * Patch #1908364 : Move "Manage IMAP Folders" to main menu (Tim Gerundt).
